fix: Resolve flickering in header while loading page, and reposition logo loading

--- a/frontend/src/app/[locale]/globals.css
+++ b/frontend/src/app/[locale]/globals.css
@@ -53,6 +53,10 @@
   }
 }
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   max-width: 100vw;
